--- a/nextgisweb/static/css/layout.less
+++ b/nextgisweb/static/css/layout.less
@@ -198,6 +198,7 @@ a[class*=" icon-"]:hover:before {
         font-weight: var(--ngw-head-font-weight);
         font-size: 16px;
         color: var(--primary);
+        max-width: calc(100% - 135px);
     }
 
     > div.container {
