--- a/nextgisweb/resource/nodepkg/webgis/webgis.less
+++ b/nextgisweb/resource/nodepkg/webgis/webgis.less
@@ -13,51 +13,33 @@ body {
 .header {
   height: 200px;
   padding: 0 10% 0 10%;
-}
 
-.header-menu {
-  height: 40px;
-  padding: 0;
-  position: absolute;
-  width: 100%;
-  top: 0;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  background: rgb(211 211 211 / 5%);
+  .name-site {
+    position: relative;
+    float: left;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 
-  .link-menu {
-    color: #fff;
-  }
-
-  .webgis-avatar {
-    position: absolute;
-    color: black;
-    margin: 0px 10% 0 0;
-    z-index: 10;
-  
-    :where(a:not(.ant-btn)) {
+    .ant-typography {
       color: #fff;
-      cursor: pointer;
-      text-decoration: underline;
-    }
-  
-    .ngw-pyramid-avatar-label {
-      display: inline-block;
-      vertical-align: middle;
-      width: 24px;
-      height: 24px;
-      line-height: 24px;
-      border-radius: 2px;
-      color: var(--on-primary-text);
-      background: #ffffff00;
-      font-size: 20px;
       text-align: center;
     }
+
+    h1 {
+      font-size: 48px;
+      font-weight: 100;
+      margin-bottom: 0;
+    }
+
+    h5 {
+      font-size: 21px;
+      font-weight: 100;
+      margin-top: 14px;
+    }
   }
+
 }
-
-
 
 .footer-webgis {
   background-color: #212020;
@@ -68,6 +50,23 @@ body {
   align-items: center;
   justify-content: center;
   margin-top: 0px;
+  flex-direction: column;
+
+  .ant-typography {
+    color: rgb(255, 255, 255);
+    word-break: break-word;
+    line-height: 1.5714285714285714;
+  }
+
+  .list-link {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .logo-uriit {
+    font-size: 64px;
+  }
 }
 
 .wrapper-webgis {
