--- a/nextgisweb/webmap/nodepkg/panel/description/DescriptionPanel.less
+++ b/nextgisweb/webmap/nodepkg/panel/description/DescriptionPanel.less
@@ -23,8 +23,8 @@
     }
     p {
         display: block;
-        margin-block-start: 1em;
-        margin-block-end: 1em;
+        margin-block-start: 0;
+        margin-block-end: 0;
         margin-inline-start: 5px;
         margin-inline-end: 5px;
     }
