--- a/nextgisweb/resource/nodepkg/webgis/webgis.less
+++ b/nextgisweb/resource/nodepkg/webgis/webgis.less
@@ -206,7 +206,7 @@ body {
 		display: flex;
 		align-items: center;
 		font-size: 24px;
-		padding: 5px;
+		padding: 5px 16px;
 	}
 
 	.open-map {
@@ -230,7 +230,7 @@ body {
 	}
 
 	.ant-card-meta-title {
-		margin: 5px;
+		margin: 5px 16px;
 		color: #000000;
 		font-weight: 400;
 		font-size: 16px;
