home webgis update style css

--- a/nextgisweb/resource/nodepkg/webgis/content.less
+++ b/nextgisweb/resource/nodepkg/webgis/content.less
@@ -98,12 +98,13 @@ body {
 
 					.ant-card-cover {
 						margin: 0;
-
+						border-bottom: 0.005em solid rgb(42 56 140 / 50%);
 					}
 
 					.ant-card-body {
 						padding: 0;
 						border-radius: 0;
+						background: #FFFAFA;
 					}
 
 					.ant-card-meta-detail {
@@ -202,7 +203,6 @@ body {
 
 						.ant-card-bordered {
 							border: 0px solid #ffffff00;
-							background: #FFFAFA;
 							display: flex;
 							flex-direction: column;
 							justify-content: space-between;
