home webgis part 5

--- a/nextgisweb/resource/nodepkg/webgis/footer.less
+++ b/nextgisweb/resource/nodepkg/webgis/footer.less
@@ -1,27 +1,25 @@
 .footer-webgis {
-	background-color: #212020;
+    background-color: #212020;
     padding: 0 10% 0 10%;
     color: #fff;
     height: auto;
     display: flex;
     margin-top: 0;
+    justify-content: space-between;
     flex-direction: column;
-    justify-content: flex-end;
 
 	.footer-info {
-		padding: 20px 0 0 0;
+		padding: 0;
 		display: flex;
 		width: 100%;
-		height: auto;
-		justify-content: space-evenly;
+		min-height: 190px;
+		margin: 10px 0 10px 0;
 	}
 
 	.uriit-logo {
 		height: 25px;
 		display: flex;
 		flex-direction: column;
-		align-items: center;
-		justify-content: center;
 		font-size: 64px;
 		margin: 0 90px 0 0;
 	}
@@ -42,6 +40,8 @@
 		}
 		.services-b {
 			padding: 0px 0px 0px 5px;
+			display: flex;
+			flex-direction: column;
 		}
 	}
 
@@ -75,11 +75,7 @@
 	}
 
 
-	.ant-typography {
-		color: rgb(255, 255, 255);
-		word-break: break-word;
-		line-height: 1.5714285714285714;
-	}
+
 
 	.list-link {
 		display: flex;
@@ -98,6 +94,8 @@
 	}
 
 	.uriit-footer-name {
-		margin: 24px 0 0 0;
+		display: flex;
+		height: 50px;
+		align-items: center;
 	}
 }
