--- a/nextgisweb/static/css/layout.less
+++ b/nextgisweb/static/css/layout.less
@@ -2,6 +2,8 @@
 
 @import (css) "@{node_modules}/@fontsource/roboto/400.css";
 @import (css) "@{node_modules}/@fontsource/roboto/500.css";
+@import (css) "@{node_modules}/@fontsource/montserrat/400.css";
+@import (css) "@{node_modules}/@fontsource/montserrat/500.css";
 
 @import "blocks/_icons.less";
 @import "blocks/_links.less";
