--- a/nextgisweb/resource/nodepkg/webgis/header.less
+++ b/nextgisweb/resource/nodepkg/webgis/header.less
@@ -2,8 +2,6 @@
 	height: 200px;
 	padding: 0 10% 0 10%;
 
-
-
 	.menu-button {
 		height: 40px;
 		width: 100%;
@@ -73,6 +71,7 @@
 		letter-spacing: 1.6px;
 		flex-direction: column;
 		text-align: center;
+		// font-family: Montserrat !important;
 
 		.ant-typography {
 			color: #fff;
@@ -80,8 +79,19 @@
 			justify-content: center;
 		}
 
+		.name-site-a {
+			// font-family: Forum;
+		}
+
+		.name-site-b {
+			// font-family: Montserrat;
+			text-transform: uppercase;
+			font-weight: 500;
+		}
+
 		h1:first-child {
 			margin: 0;
+			// font-family: Forum;
 		}
 
 		h5 {
