--- a/nextgisweb/resource/nodepkg/webgis/header.less
+++ b/nextgisweb/resource/nodepkg/webgis/header.less
@@ -47,18 +47,12 @@
 					font-weight: 500;
 				}
 
-
-
 				.ant-divider-vertical {
 					position: relative;
 					margin: 0;
 					border-inline-start: 1px solid #fff;
 				}
 			}
-
-
-
-
 		}
 	}
 
@@ -71,7 +65,6 @@
 		letter-spacing: 1.6px;
 		flex-direction: column;
 		text-align: center;
-		// font-family: Montserrat !important;
 
 		.ant-typography {
 			color: #fff;
@@ -80,18 +73,16 @@
 		}
 
 		.name-site-a {
-			// font-family: Forum;
+			font-family: Forum;
 		}
 
 		.name-site-b {
-			// font-family: Montserrat;
 			text-transform: uppercase;
 			font-weight: 500;
 		}
 
 		h1:first-child {
 			margin: 0;
-			// font-family: Forum;
 		}
 
 		h5 {
@@ -99,16 +90,14 @@
 			margin: 0;
 		}
 	}
-
-
 }
 
 .menu-avatar {
-    width: 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
+	width: 80px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 0 0 0 16px;
 
 	>a {
 		font-size: 14px;
@@ -123,12 +112,17 @@
 		height: 24px;
 		line-height: 24px;
 		border-radius: 2px;
-		color: var(--on-primary-text);
-		font-size: 14px;
+		color: #fff;
+		font-size: 16px;
 		text-align: center;
 		cursor: pointer;
-		background: rgb(42 56 140 / 75%);
+		background: rgba(255, 255, 255, 0.1);
 		justify-content: center;
+		font-weight: 500;
+	}
+
+	&-label:hover {
+		background-color: #2a388c;
 	}
 
 	.ant-btn-icon {
@@ -187,17 +181,25 @@
 
 .ant-btn-primary {
 	background-color: #2a388c;
-
+	font-family: "Montserrat";
+	font-weight: 500;
 	&:hover {
-		background-color: #212020 !important;
-		border-color: #212020 !important;
+		color: #000 !important;
+		background: #ffffff !important;
+		border-color: #2a388c !important;
 	}
 }
 
 .ngw-auth-login-form {
-	h1, h2, h3 {
+
+	h1,
+	h2,
+	h3 {
 		letter-spacing: normal;
 		color: #2a388c;
+		font-family: "Montserrat";
+		font-weight: 500;
+		margin: -9px 0 9px 0;
 	}
 }
 
@@ -213,31 +215,31 @@
 }
 
 .ant-modal .ant-modal-close {
-    position: absolute;
-    top: 10px;
-    inset-inline-end: 10px;
-    z-index: 1010;
-    padding: 0;
-    color: rgba(0, 0, 0, 0.45);
-    font-weight: 500;
-    line-height: 1;
-    text-decoration: none;
-    background: transparent;
-    border-radius: 4px;
-    width: 22px;
-    height: 22px;
-    border: 0;
-    outline: 0;
-    cursor: pointer;
-    transition: color 0s,background-color 0s;
+	position: absolute;
+	top: 10px;
+	inset-inline-end: 10px;
+	z-index: 1010;
+	padding: 0;
+	color: rgba(0, 0, 0, 0.45);
+	font-weight: 500;
+	line-height: 1;
+	text-decoration: none;
+	background: transparent;
+	border-radius: 4px;
+	width: 22px;
+	height: 22px;
+	border: 0;
+	outline: 0;
+	cursor: pointer;
+	transition: color 0s, background-color 0s;
 }
 
 .ant-modal .ant-modal-close-x {
-    display: flex;
-    font-size: 21px;
-    font-style: normal;
-    line-height: 22px;
-    justify-content: center;
-    text-transform: none;
-    text-rendering: auto;
+	display: flex;
+	font-size: 21px;
+	font-style: normal;
+	line-height: 22px;
+	justify-content: center;
+	text-transform: none;
+	text-rendering: auto;
 }
