--- a/nextgisweb/resource/nodepkg/webgis/header.less
+++ b/nextgisweb/resource/nodepkg/webgis/header.less
@@ -40,6 +40,7 @@
 
 				a:hover {
 					color: #ffffff !important;
+					background: rgba(42, 57, 141, 0.3);
 				}
 
 				a {
@@ -122,7 +123,7 @@
 	}
 
 	&-label:hover {
-		background-color: #2a388c;
+		background: rgba(42, 57, 141, 0.3);
 	}
 
 	.ant-btn-icon {
